Fix oracle NVARCHAR2 type